// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render empty timeline 1`] = `
<Timeline
  data={Array []}
>
  <div />
</Timeline>
`;

exports[`render with sample data 1`] = `
<Timeline
  data={
    Array [
      Object {
        "end": 2018-07-14T22:15:56.060Z,
        "instant": false,
        "label": "event 2",
        "start": 2018-07-14T21:01:56.060Z,
        "steps": Array [
          Object {
            "className": "custom_1",
            "end": 2018-07-14T21:24:08.060Z,
            "endPercentage": 0.3,
            "label": "sub event 1",
            "start": 2018-07-14T21:09:20.060Z,
            "startPercentage": 0.1,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T21:38:56.060Z,
            "endPercentage": 0.5,
            "label": "sub event 2",
            "start": 2018-07-14T21:31:32.060Z,
            "startPercentage": 0.4,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T21:57:26.060Z,
            "endPercentage": 0.75,
            "label": "sub event 3",
            "start": 2018-07-14T21:42:38.060Z,
            "startPercentage": 0.55,
          },
        ],
        "track": 0,
      },
      Object {
        "end": 2018-07-14T02:28:37.781Z,
        "instant": false,
        "label": "event 0",
        "start": 2018-07-14T01:42:37.781Z,
        "steps": Array [
          Object {
            "className": "custom_1",
            "end": 2018-07-14T01:56:25.781Z,
            "endPercentage": 0.3,
            "label": "sub event 1",
            "start": 2018-07-14T01:47:13.781Z,
            "startPercentage": 0.1,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T02:05:37.781Z,
            "endPercentage": 0.5,
            "label": "sub event 2",
            "start": 2018-07-14T02:01:01.781Z,
            "startPercentage": 0.4,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T02:17:07.781Z,
            "endPercentage": 0.75,
            "label": "sub event 3",
            "start": 2018-07-14T02:07:55.781Z,
            "startPercentage": 0.55,
          },
        ],
        "track": 0,
      },
      Object {
        "end": 2018-07-14T00:52:46.043Z,
        "instant": false,
        "label": "event 1",
        "start": 2018-07-14T00:17:46.043Z,
        "steps": Array [
          Object {
            "className": "custom_1",
            "end": 2018-07-14T00:28:16.043Z,
            "endPercentage": 0.3,
            "label": "sub event 1",
            "start": 2018-07-14T00:21:16.043Z,
            "startPercentage": 0.1,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T00:35:16.043Z,
            "endPercentage": 0.5,
            "label": "sub event 2",
            "start": 2018-07-14T00:31:46.043Z,
            "startPercentage": 0.4,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T00:44:01.043Z,
            "endPercentage": 0.75,
            "label": "sub event 3",
            "start": 2018-07-14T00:37:01.043Z,
            "startPercentage": 0.55,
          },
        ],
        "track": 0,
      },
    ]
  }
>
  <div />
</Timeline>
`;

exports[`render without label 1`] = `
<Timeline
  data={
    Array [
      Object {
        "end": 2018-07-14T08:36:51.565Z,
        "instant": false,
        "label": "event 0",
        "start": 2018-07-14T08:09:51.565Z,
        "steps": Array [
          Object {
            "className": "custom_1",
            "end": 2018-07-14T08:17:57.565Z,
            "endPercentage": 0.3,
            "label": "sub event 1",
            "start": 2018-07-14T08:12:33.565Z,
            "startPercentage": 0.1,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T08:23:21.565Z,
            "endPercentage": 0.5,
            "label": "sub event 2",
            "start": 2018-07-14T08:20:39.565Z,
            "startPercentage": 0.4,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-14T08:30:06.565Z,
            "endPercentage": 0.75,
            "label": "sub event 3",
            "start": 2018-07-14T08:24:42.565Z,
            "startPercentage": 0.55,
          },
        ],
        "track": 0,
      },
      Object {
        "end": 2018-07-13T21:32:44.497Z,
        "instant": false,
        "label": "event 1",
        "start": 2018-07-13T20:30:44.497Z,
        "steps": Array [
          Object {
            "className": "custom_1",
            "end": 2018-07-13T20:49:20.497Z,
            "endPercentage": 0.3,
            "label": "sub event 1",
            "start": 2018-07-13T20:36:56.497Z,
            "startPercentage": 0.1,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-13T21:01:44.497Z,
            "endPercentage": 0.5,
            "label": "sub event 2",
            "start": 2018-07-13T20:55:32.497Z,
            "startPercentage": 0.4,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-13T21:17:14.497Z,
            "endPercentage": 0.75,
            "label": "sub event 3",
            "start": 2018-07-13T21:04:50.497Z,
            "startPercentage": 0.55,
          },
        ],
        "track": 0,
      },
      Object {
        "end": 2018-07-13T18:19:02.540Z,
        "instant": false,
        "label": "event 2",
        "start": 2018-07-13T16:51:02.540Z,
        "steps": Array [
          Object {
            "className": "custom_1",
            "end": 2018-07-13T17:17:26.540Z,
            "endPercentage": 0.3,
            "label": "sub event 1",
            "start": 2018-07-13T16:59:50.540Z,
            "startPercentage": 0.1,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-13T17:35:02.540Z,
            "endPercentage": 0.5,
            "label": "sub event 2",
            "start": 2018-07-13T17:26:14.540Z,
            "startPercentage": 0.4,
          },
          Object {
            "className": "custom_1",
            "end": 2018-07-13T17:57:02.540Z,
            "endPercentage": 0.75,
            "label": "sub event 3",
            "start": 2018-07-13T17:39:26.540Z,
            "startPercentage": 0.55,
          },
        ],
        "track": 0,
      },
    ]
  }
  label={false}
>
  <div />
</Timeline>
`;
